# PotatoRecV2

./: CMakeLists.txt  PotatoRec.ini.example
.github/workflows/: build.yml
PotatoRec/: README.md
PotatoRec/src/: capture.h  main.cpp  tray.h
src/: audio.h  config.h  cursor.h  encoder.h
